Major maintenance work unit.
This is the first time I've seen the codebase compile without warnings. Most warnings come from Generics, as some classes (such as Vector) did not need specific typing prior to Java 1.5. Those warnings have been suppressed without specifically typing the elements (*). Another major source of warnings was the presence of unnecessary declarations. Some abstract methods were being called by instantiating an object, this has been corrected.

All COPYRIGHT notices are now grouped in a single COPYRIGHT file (docs), except where direct attribution to code sources (such as in the compiler) is given to individuals.

Deleted a lot of noise from CVS -- in Git, we do not need $Id$ tags to keep track of revisions. The code should be code and comments, no metadata.

Also cleaned up imports and overall code organization/indentation.