@@ -1,15 +1,17 @@
-/* $Id: PhysicalPartitionMax.java,v 1.2 2005/07/05 21:34:53 tufte Exp $ */
 package niagara.physical;
 
 import java.util.ArrayList;
 import java.util.Vector;
 
 import niagara.logical.PartitionMax;
-import niagara.optimizer.colombia.*;
-import niagara.utils.*;
+import niagara.optimizer.colombia.Attribute;
+import niagara.optimizer.colombia.LogicalOp;
+import niagara.optimizer.colombia.Op;
+import niagara.utils.Tuple;
 
 import org.w3c.dom.Node;
 
+@SuppressWarnings("unchecked")
 public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 	private Attribute maxAttribute;
 	private AtomicEvaluator ae;
@@ -18,11 +20,10 @@ public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 
 	public void opInitFrom(LogicalOp logicalOperator) {
 		super.opInitFrom(logicalOperator);
-		// Get the max attribute 
+		// Get the max attribute
 		maxAttribute = ((PartitionMax) logicalOperator).getMaxAttribute();
 		emptyGroupValue = ((PartitionMax) logicalOperator).getEmptyGroupValue();
 	}
-	
 
 	public void opInitialize() {
 		super.opInitialize();
@@ -32,52 +33,51 @@ public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 	}
 
 	/**
-	 * @see niagara.query_engine.PhysicalIncrementalGroup#processTuple(Tuple, Object)
+	 * @see niagara.query_engine.PhysicalIncrementalGroup#processTuple(Tuple,
+	 *      Object)
 	 */
-	public Object processTuple(
-		Tuple tuple,
-		Object previousGroupInfo) {
-		
+	public Object processTuple(Tuple tuple, Object previousGroupInfo) {
+
 		ae.getAtomicValues(tuple, values);
-	try {
-		if (landmark) {
-			Double prevMax = (Double) previousGroupInfo;
-			
-			Double newValue = Double.valueOf((String) values.get(0));
-			values.clear();
-			Double newMax = new Double(
-				Math.max(prevMax.doubleValue(), newValue.doubleValue()));
-			if (newMax.equals(prevMax)) {
-				// No change in group
-				return prevMax;
-			} else
-				return newMax;
-		} else {
-			Vector newGroup = (Vector) previousGroupInfo;
-			
-			Double newValue = Double.valueOf((String) values.get(0));
-			values.clear();
-			int index = ((Double)newGroup.firstElement()).intValue();
-			newGroup.set(index, newValue);
-			index = index + 1;
-			if (index > range)
-				index = 1;
-			newGroup.set(0, new Double(index));
-			Double max = findMax(newGroup);
-			newGroup.set(range+1, max);
-			return newGroup;
+		try {
+			if (landmark) {
+				Double prevMax = (Double) previousGroupInfo;
+
+				Double newValue = Double.valueOf((String) values.get(0));
+				values.clear();
+				Double newMax = new Double(Math.max(prevMax.doubleValue(),
+						newValue.doubleValue()));
+				if (newMax.equals(prevMax)) {
+					// No change in group
+					return prevMax;
+				} else
+					return newMax;
+			} else {
+				Vector newGroup = (Vector) previousGroupInfo;
+
+				Double newValue = Double.valueOf((String) values.get(0));
+				values.clear();
+				int index = ((Double) newGroup.firstElement()).intValue();
+				newGroup.set(index, newValue);
+				index = index + 1;
+				if (index > range)
+					index = 1;
+				newGroup.set(0, new Double(index));
+				Double max = findMax(newGroup);
+				newGroup.set(range + 1, max);
+				return newGroup;
+			}
+
+		} catch (NumberFormatException nfe) {
+			throw new RuntimeException("XXX vpapad what do we do here?!");
 		}
-				
-	} catch (NumberFormatException nfe) {
-		throw new RuntimeException("XXX vpapad what do we do here?!");
 	}
-	}
-	
-	private Double findMax (Vector group) {
+
+	private Double findMax(Vector group) {
 		Double newMax = emptyGroupValue;
 		for (int i = 1; i <= range; i++) {
-			if (newMax.compareTo((Double)group.elementAt(i)) < 0)
-				newMax = (Double)group.elementAt(i);
+			if (newMax.compareTo((Double) group.elementAt(i)) < 0)
+				newMax = (Double) group.elementAt(i);
 		}
 		return newMax;
 	}
@@ -88,19 +88,18 @@ public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 	public Object emptyGroupValue() {
 		return emptyGroupValue;
 	}
-	
 
 	public Vector EmptyGroup() {
 
-		Vector emptyGroup = new Vector(range  +2);
+		Vector emptyGroup = new Vector(range + 2);
 		emptyGroup.addElement(Double.valueOf("1"));
-		//the first element is the pointer to the next available element to put the new input item;
-		//the last element is used to save the current max;
-		for (int i = 1; i <= range + 1; i++ )
+		// the first element is the pointer to the next available element to put
+		// the new input item;
+		// the last element is used to save the current max;
+		for (int i = 1; i <= range + 1; i++)
 			emptyGroup.addElement(emptyGroupValue);
-		return emptyGroup;		
+		return emptyGroup;
 	}
-
 
 	/**
 	 * @see niagara.query_engine.PhysicalIncrementalGroup#constructOutput(Object)
@@ -109,13 +108,11 @@ public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 		if (landmark) {
 			return doc.createTextNode(String.valueOf(groupInfo));
 		} else {
-			Double max = (Double)((Vector) groupInfo).elementAt(range+1);
+			Double max = (Double) ((Vector) groupInfo).elementAt(range + 1);
 			return doc.createTextNode(String.valueOf(max));
 		}
-		
-		
+
 	}
-	
 
 	public Op opCopy() {
 		PhysicalPartitionMax op = new PhysicalPartitionMax();
@@ -129,8 +126,8 @@ public class PhysicalPartitionMax extends PhysicalPartitionGroup {
 			return false;
 		if (o.getClass() != PhysicalPartitionMax.class)
 			return o.equals(this);
-		return logicalGroupOperator.equals(
-			((PhysicalPartitionMax) o).logicalGroupOperator);
+		return logicalGroupOperator
+				.equals(((PhysicalPartitionMax) o).logicalGroupOperator);
 	}
 
 	public int hashCode() {
